# hea

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
datasets/babynames/: babynames.csv
datasets/forcats/: gss_cat.schema.json
datasets/ggplot2/: diamonds.schema.json
datasets/maps/: county.parquet  france.parquet  italy.parquet  lakes.parquet  nz.parquet  state.parquet  usa.parquet  world.parquet  world2.parquet
datasets/stringr/: fruit.csv  sentences.csv  words.csv
example/: gam_example_ran_et al_2020.ipynb
example/books/: dataframe.ipynb  gam.ipynb  glm.ipynb  lm.ipynb  lme.ipynb
example/papers/: Ran_et al_2020_fig4d copy.ipynb  (+1 more)
hea/: R.py  __init__.py  _cholmod.py  _loess.py  _nelder_mead.py  _r_random.py  bam.py  compare.py  data.py  dataframe.py  design.py  discrete.py  dtypes.py  emmeans.py  family.py  formula.py  gam.py  glm.py  io.py  lm.py  lme.py  named_vector.py  session_info.py  tidy.py  utils.py
tests/: conftest.py  test_R.py  test_bam.py  test_bam_chicago.py  test_bam_scat.py  test_bam_small_data.py  test_block.py  test_compare.py  test_coord_polar.py  test_data.py  test_dataframe.py  test_dataframe_subclass.py  test_family.py  test_flake8.py  test_gam.py  test_gg.py  test_ggplot.py  test_ggplot_fluent.py  test_glm.py  test_joins.py  test_lm.py  test_lme.py  test_lme_glmm.py  test_loess.py  test_materialize.py  test_measure.py  test_nelder_mead.py  test_patchwork_align.py  test_patchwork_collect.py  test_plot.py  test_plot_base.py  test_plot_par.py  test_polars_superset.py  test_scat_family.py  test_smooths.py
(+252 files in other folders)
