[tool.pytest.ini_options]
pythonpath = [".", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hea"
version = "0.1.2"
description = "Linear Models with Python"
authors = []
requires-python = ">=3.10.0"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "polars>=1.20.0",
    "pyarrow>=24.0.0",
    "rdatasets>=0.2.10",
    "scipy>=1.15.1",
]

license = "GPL-3.0-or-later"
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
fast = [
    "scikit-sparse>=0.5.0",
]
bench = [
    "pandas>=2.0.0",
    "formulae>=0.5.4",
    "formulaic>=1.1.1",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.1",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.ruff.lint]
# ``from hea.R import *`` is the intentional ergonomic for the R-flavored
# namespace — see hea/R.py. We commit to NOT using star imports anywhere
# else, so silencing these globally is safe:
#   F403 — flags every ``from X import *`` line.
#   F405 — flags every name that *might* come from a star import (ruff
#          can't statically resolve our ``__all__``).
ignore = ["F403", "F405"]

